@@ -13,6 +13,7 @@
  --bold-weight:500;
  --std-weight:400;
  --list-elem-height:48px;
+ --list-elem-3line-height:68px;
 }
 
 .v-list__tile__title, .v-select__selection, .v-select__selection--comma {
@@ -111,6 +112,10 @@ a {
 
 .lms-list .v-list__tile, .lms-list-sub .v-list__tile {
  height:calc(var(--list-elem-height) - 1px) !important;
+}
+
+.lms-list3 .v-list__tile, .lms-list-sub3 .v-list__tile {
+ height:calc(var(--list-elem-3line-height) - 1px) !important;
 }
 
 /* Make action buttons in lists closer together */
@@ -994,12 +999,21 @@ div.v-subheader {
  }
 }
 
-.lms-list .lms-avatar .v-avatar, .lms-list-sub .lms-avatar .v-avatar, .lms-list .v-list__tile__avatar .lms-list-sub .v-list__tile__avatar {
+.lms-list .lms-avatar .v-avatar, .lms-list-sub .lms-avatar .v-avatar, .lms-list .v-list__tile__avatar, .lms-list-sub .v-list__tile__avatar {
  width:calc(var(--list-elem-height) - 1px) !important;
  height:calc(var(--list-elem-height) - 1px) !important;
  margin-left:-4px;
  min-width: 54px;
 }
+
+.lms-list3 .lms-avatar .v-avatar, .lms-list-sub3 .lms-avatar .v-avatar, .lms-list3 .v-list__tile__avatar, .lms-list-sub3 .v-list__tile__avatar {
+ width:calc(var(--list-elem-3line-height) - 1px) !important;
+ height:calc(var(--list-elem-3line-height) - 1px) !important;
+ margin-left:-4px;
+ margin-right:4px;
+ min-width: 74px;
+}
+
 
 .lms-list .lms-avatar-small .v-avatar, .lms-list-sub .lms-avatar-small .v-avatar {
  width:32px !important;
