@@ -112,6 +112,12 @@ function updateUiSettings(state, val) {
         state.swipeVolume = val.swipeVolume;
         setLocalStorageVal('swipeVolume', state.swipeVolume);
     }
+
+    if (undefined!=val.queueThreeLines && state.queueThreeLines!=val.queueThreeLines) {
+        state.queueThreeLines = val.queueThreeLines;
+        setLocalStorageVal('queueThreeLines', state.queueThreeLines);
+        bus.$emit('queueDisplayChanged');
+    }
     if (browseDisplayChanged) {
         bus.$emit('browseDisplayChanged');
     }
@@ -150,7 +156,8 @@ const store = new Vuex.Store({
         hidden: new Set(),
         visibleMenus: new Set(),
         swipeVolume: true,
-        pluginUpdatesAvailable: false
+        pluginUpdatesAvailable: false,
+        queueThreeLines: false
     },
     mutations: {
         setPlayers(state, players) {
@@ -326,6 +333,7 @@ const store = new Vuex.Store({
             state.sortHome = getLocalStorageBool('sortHome', state.sortHome);
             state.hidden = new Set(JSON.parse(getLocalStorageVal('hidden', "[\""+TOP_PRESETS_ID+"\"]")));
             state.swipeVolume = getLocalStorageBool('swipeVolume', state.swipeVolume);
+            state.queueThreeLines = getLocalStorageBool('queueThreeLines', state.queueThreeLines);
             setTheme(state.darkUi);
             setFontSize(state.largeFonts);
             // Music and Artist info plugin installled?
@@ -362,7 +370,8 @@ const store = new Vuex.Store({
                                      lsAndNotif: getLocalStorageVal('lsAndNotif', undefined==prefs.lsAndNotif ? state.lsAndNotif : prefs.lsAndNotif),
                                      menuIcons: getLocalStorageBool('menuIcons', undefined==prefs.menuIcons ? state.menuIcons : prefs.menuIcons),
                                      sortHome: getLocalStorageBool('sortHome', undefined==prefs.sortHome ? state.sortHome : prefs.sortHome),
-                                     swipeVolume: getLocalStorageBool('swipeVolume', undefined==prefs.swipeVolume ? state.swipeVolume : prefs.swipeVolume)};
+                                     swipeVolume: getLocalStorageBool('swipeVolume', undefined==prefs.swipeVolume ? state.swipeVolume : prefs.swipeVolume),
+                                     queueThreeLines: getLocalStorageBool('queueThreeLines', undefined==prefs.queueThreeLines ? state.queueThreeLines : prefs.queueThreeLines) };
                         if (undefined!=prefs.hidden && undefined==getLocalStorageVal('hidden', undefined)) {
                             opts.hidden=new Set(prefs.hidden);
                         }
